# ExcelOutlinerAnalysis

./: README.md  build_windows.bat  chip_reliability_template_test_v2.xlsx  excel-data-analysis-cli.spec  excel-data-analysis-gui.spec  help.md  launch.json  pyproject.toml  setup_windows.bat  setup_windows.ps1  template_help.md  test_input.xlsx
examples/: chip_reliability_template.json  chip_reliability_template.xlsx  chip_reliability_template2.xlsx  sample_chip_data.csv  sample_chip_data_real.xlsx  sample_chip_data_real2.xlsx  sample_chip_data_real_result.xlsx
src/excel_data_analysis/: __init__.py  analyzer.py  cli.py  debug_bundle.py  gui_state.py  io.py  models.py  output_paths.py  reporting.py  repository.py  runtime.py  service.py  template.py  workspace.py
src/excel_data_analysis/assets/templates/: chip_reliability_template.json
src/excel_data_analysis/gui/: __init__.py  app.py  main_window.ui  ui_main_window.py
tests/: test_debug_bundle.py  test_gui_state.py  test_reporting_outlier_summary.py  test_storage_filters_and_delete.py  test_template_defaults.py  test_workspace.py
