[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-data-analysis"
version = "0.1.0"
description = "Template-driven Excel/CSV anomaly analysis for cross-platform desktop workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "openpyxl>=3.1.0",
  "PySide6>=6.7.0"
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0"
]

[project.scripts]
excel-data-analysis = "excel_data_analysis.cli:main"
excel-data-analysis-gui = "excel_data_analysis.gui.app:launch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
excel_data_analysis = ["assets/templates/*.json"]
